--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="margin">
+<div class="margin" style="margin: auto; width: 60%;">
     <div class="center">
         <img src="{{ MEDIA_URL }}404.png" alt="Page not found error image">
         <h1>Oops! Page not found!</h1>
@@ -21,7 +21,7 @@
                 <span >
                     <i class="fas fa-chevron-left"></i>
                 </span>
-                Back to the shopping!
+                Back to shopping!
             </a>
         </div>
     </div>
