Edit product functionality being updated

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -314,3 +314,10 @@ footer {
         height: calc(100vh - 116px);
     }
 }
+
+.hiddenForm {
+    display: none;
+}
+.displayForm {
+    display: block;
+}
