--- a/templates/404.html
+++ b/templates/404.html
@@ -17,7 +17,7 @@
         <img src="{{ MEDIA_URL }}404.png" alt="Page not found error image">
         <h1>Oops! Page not found!</h1>
         <div>
-            <a href="{% url 'products' %}" class="btn btn-outline-dark mt-2">
+            <a href="{% url 'products' %}" class="btn btn-black rounded-0 text-uppercase mt-5">
                 <span >
                     <i class="fas fa-chevron-left"></i>
                 </span>
