--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -23,7 +23,7 @@
 
         <div class="row">
             <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
+                <form id="form-container" method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.name != 'image' %}
@@ -39,6 +39,10 @@
                         {{ form |crispy }}
                     </div>
                     {% endfor %}
+                    <div class="hiddenForm">
+                        {{ formset1 }}
+                    </div>
+                    <button id="add-form" class="btn btn-black rounded-0" type="button">Add More Size</button>
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Product</button>
@@ -56,5 +60,27 @@
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
         });
+    </script>
+    <script>
+        let variationForm = document.querySelectorAll(".variation-form");
+        let container = document.querySelector("#form-container");
+        let addButton = document.querySelector("#add-form");
+        let totalForms = document.querySelector("#id_form-TOTAL_FORMS");
+        let formNum = variationForm.length-1
+        addButton.addEventListener('click', addForm);
+
+        function addForm(e) {
+        e.preventDefault()
+
+        let newForm = variationForm[0].cloneNode(true); 
+        newForm.setAttribute('class','displayForm');
+
+        let formRegex = RegExp(`form-(\\d){1}-`,'g'); 
+        formNum++ 
+        newForm.innerHTML = newForm.innerHTML.replace(formRegex, `form-${formNum}-`); 
+        container.insertBefore(newForm, addButton); 
+        totalForms.setAttribute('value', `${formNum+1}`) 
+        }
+       
     </script>
 {% endblock %}
