Added Home page menu item and wired up

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -58,7 +58,7 @@
             $('#filename').text(`Image will be set to: ${file.name}`);
         });
     </script>
-    <script>
+    <!-- <script>
         let variationForm = document.querySelectorAll(".variation-form");
         let container = document.querySelector("#form-container");
         let addButton = document.querySelector("#add-form");
@@ -79,5 +79,5 @@
         totalForms.setAttribute('value', `${formNum+1}`) 
         }
        
-    </script>
+    </script> -->
 {% endblock %}
