--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,9 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item">
+            <a href="{% url 'home' %}" class="logo-font font-weight-bold nav-link text-black mr-5 nav-text" id="home">Home</a>
+        </li>
+        <li class="nav-item">
             <a href="{% url 'about' %}" class="logo-font font-weight-bold nav-link text-black mr-5 nav-text" id="about">About</a>
         </li>
         <li class="nav-item dropdown">
