Product page style updated

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -313,7 +313,11 @@ footer {
     body {
         height: calc(100vh - 116px);
     }
+    #product-row {
+        margin-top: 100px !important;
+    }
 }
+
 
 .hiddenForm {
     display: none;
