--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
-        <div class="row">
+        <div id="product-row" class="row">
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Products</h2>
                 {% for c in current_categories %}
