Updated edit product template

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -40,10 +40,14 @@
                     </div>
                     {% endfor %}
                     <!-- <button id="add-form" class="btn btn-black rounded-0" type="button">Add More Size</button> -->
+                    <div>
+                        <h5 style="color: blue;">NOTE: Please delete (check) empty forms before submission </h5>
+                    </div>
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Product</button>
                     </div>
+                    
                 </form>
             </div>            
         </div>
