Image display error fixed in about template

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="/media/IMG_RMDRS622DYR.jpg" alt="Card image cap">
+          <img class="card-img-top" src="{{ MEDIA_URL }}IMG_RMDRS622DYR.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Dolphin Bubble Roll- Yellow Border</h5>
             <p class="card-text">Yellow Border with Rubber Compound enhances durability. Tough and resilient. Several air pockets to enhance 
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="/media/IMG_RMDRH101YR0.jpg" alt="Rubber Mat">
+          <img class="card-img-top" src="{{ MEDIA_URL }}IMG_RMDRH101YR0.jpg" alt="Rubber Mat">
           <div class="card-body">
             <h5 class="card-title">Dolphin O-Ring Rolls</h5>
             <p class="card-text">Advanced technology to meet your connecting needs. Designed to cover large area without the hurdles of 
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="/media/IMG_CMDCR148900.jpg" alt="Coir mat">
+          <img class="card-img-top" src="{{ MEDIA_URL }}IMG_CMDCR148900.jpg" alt="Coir mat">
           <div class="card-body">
             <h5 class="card-title">Coco Brush Grill Mat DCR 1489</h5>
             <p class="card-text">Specially desined mat for your door steps.  It is made with coir fibre and natural rubber latex. 
