Updated test.md and contact page

--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -61,7 +61,7 @@
       </div>
       <br>
       <div class="row margin">
-        <input type="submit" value="Submit" id="submit" class="btn btn-secondary">
+        <input type="submit" value="Send" id="submit" class="btn btn-secondary">
       </div>
     </form>
 </div>
