--- a/static/css/base.css
+++ b/static/css/base.css
@@ -327,3 +327,9 @@ footer {
 .displayForm {
     display: block;
 }
+
+@media (max-width: 991px) {
+    .h1, h1 {
+      font-size: 1.5rem !important;
+    }
+  }
