Updated profile template

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -39,9 +39,8 @@
                         {{ form |crispy }}
                     </div>
                     {% endfor %}
-                    <!-- <button id="add-form" class="btn btn-black rounded-0" type="button">Add More Size</button> -->
                     <div>
-                        <h5 style="color: blue;">NOTE: Please delete (check) empty forms before submission </h5>
+                        <h5 style="color: rgb(255, 72, 0);">NOTE: Please check Delete for empty form(s) before submission </h5>
                     </div>
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
