--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-6 logo-font text-black" style="font-size: 1.5rem;">
+                <h1 class="display-6 logo-font text-black">
                     <span id="hdisplay1">Super quality rubber mats from the land of natural latex</span> 
                 </h1>
                 <div class="my-5">
