--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,7 @@ html {
 
 body {
     background: url('/media/home_background_1.jpg') no-repeat center center fixed; 
+    background-color: #f5f5f5;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -15,7 +16,7 @@ body {
 .hidden {
     display: none;
 }
-/* from Bulma */
+
 .icon {
     align-items: center;
     display: inline-flex;
@@ -45,7 +46,7 @@ body {
 
 .btn-outline-black {
     background: white;
-    color: black !important; /* use important to override link colors for <a> elements */
+    color: black !important; 
     border: 1px solid black;
 }
 
@@ -161,7 +162,7 @@ footer {
     right: 36px;
 }
 
-/* Convenience classes - colors copied from Bootstrap */
+
 .arrow-primary {
     border-bottom-color: #007bff !important;
 }
@@ -209,7 +210,7 @@ footer {
 
 /* -------------------------------- Media Queries */
 
-/* Slightly larger container on xl screens */
+
 @media (min-width: 1200px) {
   .container {
     max-width: 80%;
@@ -255,7 +256,6 @@ footer {
     line-height: 1.5;
     border-radius: 0;
 
-    /* standard bootstrap btn transitions */
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
@@ -313,7 +313,7 @@ footer {
     }
 }
 
-/* pad the top a bit when navbar is collapsed on mobile */
+
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
