Updated products template

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -118,7 +118,7 @@
             </div>
         </div>
         <!-- Paginator start -->
-        <!-- Credit: Pagination For Django by Codemy.com (https://www.youtube.com/watch?v=N-PB-HMFmdo) -->
+        <!-- Credit: The following code for pagination has used code from 'https://www.youtube.com/watch?v=wY_BNsxCEi4' by Codemy.com and has changed to fit the purpose of the project -->
         {% if products %}
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center text-center">
