--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -100,7 +100,7 @@
                                         <a href="{% url 'edit_review' rev.id %}">Edit</a>
                                     </td>
                                     <td class="ml-3">
-                                        <a class="text-danger" href=""><i class="fas fa-trash-alt"></i></a>
+                                        <a class="text-danger" href="{% url 'delete_review' rev.id %}"><i class="fas fa-trash-alt"></i></a>
                                     </td>
                                 </tr>
                             {% endfor %}
