--- a/products/templates/products/edit_review.html
+++ b/products/templates/products/edit_review.html
@@ -29,8 +29,8 @@
                     {% csrf_token %}
                     <h5 style="color: rgb(161, 108, 9);">{{review.product}}</h5>
                     <div>
-                        {% if product.image %}
-                            <img src="{{  product.image.url }}" alt="Product Image" style="width: 100px; height: auto;">
+                        {% if review.product.image %}
+                            <img src="{{  review.product.image.url }}" alt="Product Image" style="width: 100px; height: auto;">
                         {% else %}
                             <img src="{{ MEDIA_URL }}noimage.png" alt="Product Image" style="width: 100px; height: auto;">
                         {% endif %}
@@ -66,7 +66,7 @@
 				
                 <br>
                     <div class="text-right" style="margin-bottom: 20px;">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
+                        <a class="btn btn-outline-black rounded-0" href="{% url 'profile' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Submit Review</button>
                     </div>
                 </form>
