Updated checkout templates and contact model

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,6 +5,9 @@
 			<p>Site develped by Baiju Abraham</p>
 		</div>
 		<div class="col">
+			<a id ='footer-contact' href="{% url 'contact_form' %}" target="_blank">Contct</a>
+		</div>
+		<div class="col">
 			<a href="https://www.linkedin.com/in/baiju-abraham-a40633225" target="_blank" rel="noopener noreferrer" >
                 <i class="fab fa-linkedin social"></i>
             </a>
