--- a/products/templates/products/delete_review.html
+++ b/products/templates/products/delete_review.html
@@ -15,18 +15,18 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
-                <h4 class="logo-font mb-4">Delete Product - <span style="color: darkorange;">{{product.name}}</span> </h4>
+                <h4 class="logo-font mb-4">Delete Review - <span style="color: darkorange;">{{review.subject}}</span> </h4>
                 <hr>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12 col-md-6">
-                <form id="form-container" method="post" action="{% url 'delete_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
+                <form id="form-container" method="post" action="{% url 'delete_review' review.id %}"" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
-                        <h4>Are you sure you want to delete this product?</h4><br>
+                        <h4>Are you sure you want to delete this review?</h4><br>
                         <input class="btn btn-danger" type="submit" value="Yes" />
-                        <a href="{% url 'products' %}"><div class="btn btn-primary">Cancel</div></a>
+                        <a href="{% url 'profile' %}"><div class="btn btn-primary">Cancel</div></a>
                 </form>
             </div>            
         </div>
