--- a/static/css/base.css
+++ b/static/css/base.css
@@ -133,6 +133,15 @@ footer {
     color: #9e2a2b;
   }
 
+  #footer-contact {
+    text-decoration: none !important;
+    font-size: 1.2rem;
+    padding: 4px;
+    color: #f8f9fa;
+  }
+  #footer-contact:hover {
+    color: #9e2a2b;
+  }
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
