Added email confirmation functionality and templates for contact

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -41,7 +41,7 @@
             </div>
         </li>
         <li class="nav-item">
-            <a href="{% url 'contact_form' %}" class="logo-font font-weight-bold nav-link text-black mr-5 nav-text" id="about">Contact Us</a>
+            <a href="{% url 'contact_submit' %}" class="logo-font font-weight-bold nav-link text-black mr-5 nav-text" id="about">Contact Us</a>
         </li>
     </ul>
 </div>
