--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -1,68 +1,36 @@
 {% extends "base.html" %}
 {% load static %}
-{% block extra_title %} - contact us {% endblock %}
+
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'home/css/main.css' %}">
 {% endblock %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock%}
 
 {% block content %}
-<div class="overlay"></div>
-<div class="container">
+<div class="dark-overlay"></div>
+<div class="container-fluid">
     <div class="row">
         <div class="col">
-            <hr>
-            <h2 class="title mb-4 text-center">Contact Us</h2>
-            <hr>
+            <hr class="w-75 mx-auto">
+            <h1 class="display-4 text-center title">Contact Us</h1>
+            <hr class="w-75 mx-auto">
         </div>
     </div>
-</div>
-<div class="form-container col-8 offset-2 p-5">
-    <form method="POST" class="was-validated" action="{% url 'contact_submit' %}">
-      {% csrf_token %}
-      <div class="row">
-        <div class="col-25">
-          <label for="fname">First Name</label>
+    <div class="row">
+        <div class="col-12 col-md-6 mx-auto">
+            <div class="mb-5">
+                <h6 class="text-muted">Please fill out the form below and we'll get back to
+                    you as soon as possible.</h6>
+                <small class="text-muted"><i>* is a required field</i></small>
+            </div>
+            <form action="{% url 'contact_submit' %}" method="POST" class="update-form">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <div class="d-flex justify-content-end gap-4 py-5">
+                    <a href="{% url 'contact_submit' %}" class="btn btn-outline-light rounded-0">Cancel</a>
+                    <button class="btn btn-light rounded-0" type="submit">Send</button>
+                </div>
+            </form>
         </div>
-        <div class="col-75">
-          <input type="text" id="fname" name="firstname" placeholder="Your name.."  pattern="^[A-Za-z0-9 _]*[A-Za-z0-9][A-Za-z0-9 _]*$" required>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-25">
-          <label for="lname">Last Name</label>
-        </div>
-        <div class="col-75">
-          <input type="text" id="lname" name="lastname" placeholder="Your last name.." pattern="^[A-Za-z0-9 _]*[A-Za-z0-9][A-Za-z0-9 _]*$" required>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-25">
-          <label for="country">Email</label>
-        </div>
-        <div class="col-75">
-          <input type="email" id="email" name="email" placeholder="Your Email.." required>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-25">
-          <label for="subject">Message</label>
-        </div>
-        <div class="col-75">
-          <textarea id="subject" name="message" placeholder="Your message.." style="height:200px" pattern="^[A-Za-z0-9 _]*[A-Za-z0-9][A-Za-z0-9 _]*$" required></textarea>
-        </div>
-      </div>
-      <br>
-      <div class="row margin">
-        <input type="submit" value="Send" id="submit" class="btn btn-secondary">
-      </div>
-    </form>
+    </div>
 </div>
 {% endblock %}
