--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -15,19 +15,16 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col">
-            <hr>
-            <h2 class="title mb-4 text-center">Contact Us</h2>
-            <hr>
+            <hr class="w-75 mx-auto">
+            <h2 class="title mb-4 text-center">Contact Us</h2> 
+            <hr class="w-75 mx-auto">
         </div>
     </div>
-</div>
-<div class="form-container col-8 offset-2 p-5">
-    <form method="POST" class="was-validated" action="{% url 'contact_submit' %}">
-      {% csrf_token %}
-      <div class="row">
+
+    <div class="row">
         <div class="col-12 col-md-6 mx-auto">
             <div class="mb-5">
                 <h6>Please fill out the form below and we'll get back to
@@ -43,8 +40,7 @@
                 </div>
             </form>
         </div>
-    </div>
       <br>
-    </form>
+    </div>
 </div>
 {% endblock %}
