--- a/products/templates/products/add_review.html
+++ b/products/templates/products/add_review.html
@@ -43,14 +43,14 @@
 							<input type="radio" name="rating" id="rating4" value="4" required /><label for="rating4" title="4"></label>
 							<input type="radio" name="rating" id="rating3" value="3" required /><label for="rating3" title="3"></label>
 							<input type="radio" name="rating" id="rating2" value="2" required /><label for="rating2" title="2"></label>
-							<input type="radio" name="rating" id="rating1" value="1" required /><label for="rating1" title="1"></label>
+							<input type="radio" name="rating" id="rating1" value="1" required checked /><label for="rating1" title="1"></label>
 						</div>
                         <br>
 						Review Title:
-						<input type="text" class="form-control" name="subject">
+						<input type="text" class="form-control" name="subject" required>
 						<br>
 						Review:
-						<textarea name="review" rows="4" class="form-control"></textarea>
+						<textarea name="review" rows="4" class="form-control" required></textarea>
 						<br>
 					</div>        
 				
