Updated test.md and css

--- a/products/templates/products/edit_review.html
+++ b/products/templates/products/edit_review.html
@@ -67,7 +67,7 @@
                 <br>
                     <div class="text-right" style="margin-bottom: 20px;">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'profile' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Submit Review</button>
+                        <button class="btn btn-black rounded-0" type="submit">Update Review</button>
                     </div>
                 </form>
             </div>            
