--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -36,7 +36,7 @@
                 </form>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Order History</p>
+                <h5 class="text-muted">Order History</h5>
                 <div class="order-history table-responsive">
                     <table class="table table-sm table-borderless">
                         <thead>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div id= "id-review" class="col-12 col-lg-8">
-                <p class="text-muted" style="font-weight: bold;">My Reviews</p>
+                <h5 class="text-muted">My Reviews</h5>
                 <div>
                     <table class="table table-sm table-borderless">
                         <thead>
