Updated footer template

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,7 +5,7 @@
 			<p>Site develped by Baiju Abraham</p>
 		</div>
 		<div class="col">
-			<a id ='footer-contact' href="{% url 'contact_submit' %}" target="_blank">Contct</a>
+			<a id ='footer-contact' href="{% url 'contact_submit' %}">Contct</a>
 		</div>
 		<div class="col">
 			<a href="https://www.linkedin.com/in/baiju-abraham-a40633225" target="_blank" rel="noopener noreferrer" >
