Updated css to stick the footer at the bottom

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -121,7 +121,7 @@ footer {
     position: absolute; 
     margin-left: 0 ; 
     margin-right: 0; 
-    margin-bottom: 0; 
+    bottom: 0; 
   }
   .social {
     font-size: 1.5rem;
