Corrected typo errors

--- a/templates/500.html
+++ b/templates/500.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="margin">
     <div class="center">
-        <img src="{{ MEDIA_URL }}500.jpg" alt="500 error image">
+        <img src="{{ MEDIA_URL }}500.png" alt="500 error image">
         <div>
             <a href="{% url 'home' %}" class="btn btn-outline-dark mt-2">
                 <span >
