--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,7 +29,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold" id="p_price">£{{  product.variations.first.price }}</p>
+                    <p class="lead mb-0 text-left font-weight-bold" id="p_price">£{{  product.baseprice }}</p>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
                         <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -56,7 +56,7 @@
                                 <p><strong>Size:</strong></p>
                                 {% if product.variations.all %}
                                 <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
-                                {% for psize in product.variations.all %}
+                                {% for psize in product.variations.all|dictsort:"price" %}
                                     <option value='{{ psize.price }}'>{{ psize.size }}</option>
                                 {% endfor %}
                                 </select>
